tests/error/implicit_f2i.gw
fun void test(int i) {}
2.3 => test;
